# Edily

./: .gitignore  .hgignore  ChangeLog  MANIFEST  Makefile  Makefile.am  Makefile.in  NEWS  PKG-INFO  TODO  aclocal.m4  config.h.in  configure  configure.in  fugue.mid  joue  midi-in.py  setup.py
Midi/: __init__.py  alsaport.py  console.py  dumper.py  main.py  midi.py  midiport.py  writer.py
lib/: Makefile.am  Makefile.in
m4/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  alsa.pyx  joue.c  mymidikbd.c  rawmidi.c  system.h
web/: gabarit.xsl  index.html  site.mk
web/notes/: site.mk
web/src/: README.rst  index.html
